fix: remove menuoption-border bleeding

--- a/components/menu/src/styles/default/color-menuoption.scss
+++ b/components/menu/src/styles/default/color-menuoption.scss
@@ -10,8 +10,8 @@
 :host {
   .wrapper {
     background-color: var(--ds-auro-menuoption-container-color);
+    box-shadow: inset 0 0 0 1px var(--ds-auro-menuoption-container-border-color);
     color: var(--ds-auro-menuoption-text-color);
-    outline: 1px solid var(--ds-auro-menuoption-container-border-color);
   }
 
   svg {
